--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <h3>Our Mission</h3>
               <h2>Recent Catalyst surveys have revealed that the Spring 24 pledge class has not been attending workshops and social events</h2>
               <p>
-                Our goal is to maximize nme attendance and brutally punish inactive members
+                Our goal is to maximize event attendance, facilitate PC bonding, and brutally punish inactive members
               </p>
               <div class="text-center text-lg-start">
                 <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
@@ -194,7 +194,7 @@
             <div class="count-box">
               <i class="bi bi-people" style="color: #bb0852;"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
+                <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Hard Workers</p>
               </div>
             </div>
@@ -212,7 +212,7 @@
 
         <header class="section-header">
           <h2>Features</h2>
-          <p></p>
+          <p>What Do We Offer?</p>
         </header>
 
         <div class="row">
@@ -234,35 +234,35 @@
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="300">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>Client satisfaction guaranteed</h3>
+                  <h3>Automatic Kurama venmos</h3>
                 </div>
               </div>
 
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="400">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>No more half empty workshops</h3>
+                  <h3>Full workshop participation</h3>
                 </div>
               </div>
 
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="500">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>Severe harmful punishments</h3>
+                  <h3>Great Hackathon Projects!!!</h3>
                 </div>
               </div>
 
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="600">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>Everyone Happy</h3>
+                  <h3>18 catasigs guaranteed</h3>
                 </div>
               </div>
 
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="700">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>Insane Business Model</h3>
+                  <h3>Referrals or something like that</h3>
                 </div>
               </div>
 
@@ -334,11 +334,11 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="box">
-              <h3 style="color: #ff0071;">Full Stalker</h3>
+              <h3 style="color: #ff0071;">Stalker</h3>
               <div class="price"><sup>$</sup>49<span> / mo</span></div>
               <img src="assets/img/pricing-ultimate.png" class="img-fluid" alt="">
               <ul>
-                <li>Good for sahaas</li>
+                <li>@saahas_parise</li>
            
               </ul><button type="button" class="btn btn-buy" data-bs-toggle="modal" data-bs-target="#mainModal" data-bs-price="49$" data-bs-whatever="Full stacker">
                 Buy Now
@@ -439,7 +439,7 @@
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                  <h3>Sahaas Parise</h3>
+                  <h3>Saahas Parise</h3>
                   <h4>Entrepreneur</h4>
                 </div>
               </div>
@@ -477,7 +477,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Samul Borman</h4>
+                <h4>Samul Bormans</h4>
                 <span>Chief Executive Officer</span>
                 <p>enjoys long walks on the beach with his mom</p>
               </div>
@@ -617,7 +617,7 @@
                 <div class="info-box">
                   <i class="bi bi-telephone"></i>
                   <h3>Call Us</h3>
-                  <p>69696969<br>420</p>
+                  <p>(262)-933-6958 (Kevin's Number)</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -682,14 +682,7 @@
   
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>FlexStart</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/flexstart-bootstrap-startup-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        &copy; Copyright <strong><span>CataTracker</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
